# dipstick

./: .directory  .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  Cargo.toml  HANDBOOK.md  HANDBOOK.md.skt.md  Makefile  Makefile.juga  README.md  README.md.skt.md  README.tpl  build.rs  justfile
examples/: aggregate.rs  aggregate2graphite.rs  aggregate2stdout.rs  async.rs  async_queue.rs  basics.rs  bench_bucket.rs  bench_bucket_proxy.rs  bench_queue.rs  bucket2graphite.rs  bucket2stdout.rs  bucket_cleanup.rs  bucket_summary.rs  buffered.rs  buffered_flush_on_drop.rs  cache.rs  clopwizard.rs  custom_publish.rs  graphite.rs  macro_aggregate.rs  macro_delegate.rs  macro_deprecated.rs  macro_multi.rs  macro_proxy.rs  macros_out.rs  multi_input.rs  multi_out.rs  multi_out_raw.rs  multi_output.rs  observer.rs  per_metric_sampling.rs  prometheus.rs  prometheus_labels.rs  proxy.rs  proxy_multi.rs  proxy_multi_output.rs  raw_log.rs  sampling.rs  scoped_print.rs  static_metrics.rs  (+4 more)
examples/aggregate/: Cargo.toml
examples/aggregate/src/: main.rs
examples/aggregate_print/: Cargo.toml
examples/aggregate_print/src/: main.rs
examples/aggregate_statsd/src/: main.rs
examples/async_print/: Cargo.toml
examples/async_print/src/: main.rs
examples/counter_timer_gauge/: Cargo.toml
examples/counter_timer_gauge/src/: main.rs
examples/custom_publish/: Cargo.toml
examples/custom_publish/src/: main.rs
examples/dispatch_print/: Cargo.toml
examples/dispatch_print/src/: main.rs
examples/graphite/: Cargo.toml
examples/graphite/src/: main.rs
examples/macro_dispatch/: Cargo.toml
examples/macro_dispatch/src/: main.rs
examples/macro_outs/: Cargo.toml
examples/multi_outs/: Cargo.toml
examples/multi_outs/src/: main.rs
examples/queued/src/: main.rs
examples/raw_log/: Cargo.toml
examples/raw_log/src/: main.rs
examples/sampling/: Cargo.toml
examples/sampling/src/: main.rs
examples/scoped_print/: Cargo.toml
examples/scoped_print/src/: main.rs
examples/static_metrics/: Cargo.toml
examples/static_metrics/src/: main.rs
examples/summary_print/: Cargo.toml
examples/summary_print/src/: main.rs
handbook/: 01_basics.md  02_inputs.md  03_outputs.md  04_aggregation.md  05_concurrency.md
lib/: Cargo.toml
lib/src/: aggregate.rs  cache.rs
procmacros/: Cargo.toml
procmacros/src/: lib.rs
schema/: prometheus_proto.proto
src/: aggregate.rs  aggregate_sink.rs  aggregate_source.rs  app.rs  app_delegate.rs  app_metrics.rs  async.rs  async_queue.rs  atomic.rs  attributes.rs  bucket.rs  buffer.rs  buk.rs  cache.rs  cache_in.rs  cache_out.rs  clock.rs  coatcheck.rs  config.rs  console.rs  context.rs  core.rs  delegate.rs  deprecated.rs  dispatch.rs  dual.rs  error.rs  fnsink.rs  global_metrics.rs  graphite.rs  input.rs  label.rs  lib.rs  local.rs  local_delegate.rs  local_metrics.rs  log.rs  logging.rs  lru_cache.rs  macros.rs  (+41 more)
src/aggregate/: bucket.rs  mod.rs  publish.rs  scores.rs  sink.rs  source.rs
src/bucket/: atomic.rs  mod.rs
src/cache/: cache_in.rs  cache_out.rs  gapless_in.rs  lru_cache.rs  mod.rs
src/core/: attributes.rs  clock.rs  component.rs  error.rs  input.rs  label.rs  locking.rs  metrics.rs  mod.rs  name.rs  out_lock.rs  output.rs  pcg32.rs  proxy.rs  scheduler.rs  void.rs
src/multi/: mod.rs  multi_in.rs  multi_out.rs
src/output/: format.rs  graphite.rs  graphite_udp.rs  log.rs  logging.rs  map.rs  mod.rs  prometheus.rs  prometheus_proto.rs  socket.rs  statsd.rs  stream.rs  text.rs  void.rs
src/queue/: mod.rs  queue_in.rs  queue_out.rs
src/todo/: buffer.rs
tests/: aggregate_stats.rs  skeptic.rs
