[package]
name = "dipstick"
version = "0.7.0"
authors = ["Francis Lalonde <fralalonde@gmail.com>"]

description = """A fast and modular metrics library decoupling app instrumentation from reporting backend.
 Similar to popular logging frameworks, but with counters and timers.
 Can be configured for combined outputs (log + statsd), random sampling, local aggregation of metrics, recurrent background publication, etc."""

documentation = "https://docs.rs/dipstick"
homepage = "https://github.com/fralalonde/dipstick"
repository = "https://github.com/fralalonde/dipstick"
readme = "README.md"
keywords = ["metrics", "statsd", "graphite", "timer", "monitoring"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "fralalonde/dipstick", branch = "master" }

[dependencies]
log = "0.4"
lazy_static = "1"
atomic_refcell = "0.1"
skeptic = { version = "0.13", optional = true }
num = { version = "0.2", default-features = false }

# FIXME required only for random seed for sampling
time = "0.1"

prometheus = { version = "0.4" }

# optional dep for standalone http pull metrics
tiny_http = { version = "0.6", optional = true }

[build-dependencies]
skeptic = { version = "0.13", optional = true }

[features]
default-features = [ "self_metrics", "tiny_http" ]
bench = []
self_metrics = []
tokio = []
#prometheus = []

[package.metadata.release]
#sign-commit = true
#upload-handbook = true
pre-release-replacements = [
  {file="README.md", search="dipstick = \"[a-z0-9\\.-]+\"", replace="dipstick = \"{{version}}\""}
  ]