[package]
name = "dipstick"
version = "0.9.2"
authors = ["Francis Lalonde <fralalonde@gmail.com>"]

description = """Fast, all-purpose metrics library decoupling instrumentation from reporting backends.
 Like logging frameworks but with counters, timers and gauges.
 Supports combined outputs (e.g. log + graphite), sampling, aggregation, scheduled push, etc."""

documentation = "https://docs.rs/dipstick"
homepage = "https://github.com/fralalonde/dipstick"
repository = "https://github.com/fralalonde/dipstick"
readme = "README.md"
keywords = ["metrics", "statsd", "graphite", "timer", "prometheus"]
license = "MIT/Apache-2.0"
edition = "2021"

[badges]
travis-ci = { repository = "fralalonde/dipstick", branch = "master" }

[dependencies]
log = "0.4"
lazy_static = "1"
atomic_refcell = "0.1"
#skeptic = { version = "0.13", optional = true }
num = { version = "0.4", default-features = false }
crossbeam-channel = { version = "0.5", optional = true }
parking_lot = { version = "0.12", optional = true }
minreq = { version = "2" }

# optional dep for standalone http pull metrics
tiny_http = { version = "0.12", optional = true }

doc-comment = { version = "0.3", optional = true }

[features]
default = [ "self_metrics", "crossbeam-channel", "parking_lot" ]
bench = []
self_metrics = []
tokio = []


[package.metadata.release]
#sign-commit = true
#upload-handbook = true
pre-release-replacements = [
  {file="README.md", search="dipstick = \"[a-z0-9\\.-]+\"", replace="dipstick = \"{{version}}\""}
  ]
