[package]
name = "dipstick-procmacros"
version = "0.7.3-alpha.0"
authors = ["Francis Lalonde <fralalonde@gmail.com>"]

description = """Procmacros for Dipstick, providing #[timed] #[counted] and other declarative instrumentation.
 Dipstick is a featureful, fast and fun metrics library decoupling app instrumentation from reporting backends.
 Similar to popular logging frameworks, but with counters, timers and gauges.
 Lots of features like combined outputs (e.g. log + graphite), sampling, aggregation, periodical publication, etc."""

documentation = "https://docs.rs/dipstick-procmacros"
homepage = "https://github.com/fralalonde/dipstick"
repository = "https://github.com/fralalonde/dipstick"
readme = "README.md"
keywords = ["metrics", "statsd", "graphite", "timer", "prometheus"]
license = "MIT/Apache-2.0"

[dependencies]
syn = {version= "0.15" }
quote = "0.6"

[lib]
proc-macro = true